--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
+    "vite": "^7.2.6",
+    "@vitejs/plugin-react": "^5.1.1",
+    "recharts": "^3.5.1",
     "react-dom": "^19.2.0",
     "lucide-react": "^0.555.0",
-    "recharts": "^3.5.1",
+    "react": "^19.2.0",
     "xlsx": "^0.18.5",
-    "papaparse": "^5.5.3",
-    "fuse.js": "^7.1.0"
+    "fuse.js": "^7.1.0",
+    "papaparse": "^5.5.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
