--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mi-cine-react",
+  "name": "mi-cine",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.2.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,20 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vite": "^7.2.6",
-    "@vitejs/plugin-react": "^5.1.1",
-    "recharts": "^3.5.1",
-    "react-dom": "^19.2.0",
-    "lucide-react": "^0.555.0",
-    "react": "^19.2.0",
-    "xlsx": "^0.18.5",
-    "fuse.js": "^7.1.0",
-    "papaparse": "^5.5.3"
+    "fuse.js": "^7.0.0",
+    "lucide-react": "^0.292.0",
+    "papaparse": "^5.4.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "recharts": "^2.9.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/papaparse": "^5.3.11",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.0"
   }
 }
